binrw/tests/ui/args_vec_mistakes.stderr
error[E0277]: the trait bound `VecArgs<()>: binrw::__private::MissingArgsDirective` is not satisfied
 --> tests/ui/args_vec_mistakes.rs:7:20
  |
7 | struct MissingArgs(Vec<u8>);
  |                    ^^^^^^^ the trait `Default` is not implemented for `VecArgs<()>`
  |
  = note: required for `VecArgs<()>` to implement `binrw::__private::MissingArgsDirective`
note: required by a bound in `binrw::__private::Required::args`
 --> src/private.rs
  |
  | pub trait Required: MissingArgsDirective {
  |                     ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Required::args`
  |     fn args() -> Self;
  |        ---- required by a bound in this associated function

error[E0308]: mismatched types
  --> tests/ui/args_vec_mistakes.rs:10:23
   |
10 | struct WrongType(#[br(args((),))] Vec<u8>);
   |                       ^^^^        ------- expected due to this
   |                       |
   |                       expected `VecArgs<()>`, found `((),)`
   |
   = note: expected struct `VecArgs<()>`
               found tuple `((),)`

error[E0599]: the method `finalize` exists for struct `binrw::binread::impls::VecArgsBuilder<(), binrw::__private::Needed, binrw::__private::Satisfied>`, but its trait bounds were not satisfied
  --> tests/ui/args_vec_mistakes.rs:13:26
   |
13 | struct MissingCount(#[br(args { inner: () })] Vec<u8>);
   |                          ^^^^ method cannot be called due to unsatisfied trait bounds
   |
  ::: src/named_args.rs
   |
   | pub struct Needed;
   | ----------------- doesn't satisfy `_: SatisfiedOrOptional`
   |
   = note: the following trait bounds were not satisfied:
           `binrw::__private::Needed: binrw::__private::SatisfiedOrOptional`
   = note: this error originates in the macro `binrw::args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: TryFrom<Option<{integer}>>` is not satisfied
  --> tests/ui/args_vec_mistakes.rs:22:36
   |
22 | struct WrongCountType(#[br(count = Some(1))] Vec<u8>);
   |                                    ^^^^^^^ the trait `From<Option<{integer}>>` is not implemented for `usize`
   |
help: `usize` implements trait `From<T>`
  --> $RUST/core/src/convert/num.rs
   |
   = note: `From<bool>`
  ::: $RUST/core/src/convert/num.rs
   |
   = note: in this macro invocation
  ::: $RUST/core/src/convert/num.rs
   |
   = note: `From<u16>`
   |
   = note: `From<u8>`
  ::: $RUST/core/src/convert/num.rs
   |
   = note: in this macro invocation
  ::: $RUST/core/src/convert/num.rs
   |
   = note: in this macro invocation
  --> $RUST/core/src/mem/alignment.rs
   |
   = note: `From<std::mem::Alignment>`
   = note: required for `Option<{integer}>` to implement `Into<usize>`
   = note: required for `usize` to implement `TryFrom<Option<{integer}>>`
   = note: this error originates in the macro `impl_from_bool` which comes from the expansion of the macro `impl_from` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `finalize` exists for struct `binrw::binread::impls::VecArgsBuilder<(NoDefault,), binrw::__private::Satisfied, binrw::__private::Needed>`, but its trait bounds were not satisfied
  --> tests/ui/args_vec_mistakes.rs:25:42
   |
 4 | struct NoDefault;
   | ---------------- doesn't satisfy `NoDefault: Default`
...
25 | struct MissingInnerArgs(#[br(count = 1)] Vec<Inner>);
   |                                          ^^^^^^^^^^ method cannot be called due to unsatisfied trait bounds
   |
  ::: src/named_args.rs
   |
   | pub struct Needed;
   | ----------------- doesn't satisfy `_: SatisfiedOrOptional`
   |
   = note: the following trait bounds were not satisfied:
           `NoDefault: Default`
           which is required by `(NoDefault,): Default`
           `binrw::__private::Needed: binrw::__private::SatisfiedOrOptional`
   = note: this error originates in the macro `binrw::args` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NoDefault` with `#[derive(Default)]`
   |
 4 + #[derive(Default)]
 5 | struct NoDefault;
   |

error[E0277]: the trait bound `VecArgs<()>: binrw::__private::Required` is not satisfied
  --> tests/ui/args_vec_mistakes.rs:28:5
   |
28 |     Vec::<u8>::read(&mut binrw::io::Cursor::new(b"")).unwrap();
   |     ^^^^^^^^^ the trait `Default` is not implemented for `VecArgs<()>`
   |
   = note: required for `VecArgs<()>` to implement `binrw::__private::Required`
note: required by a bound in `binrw::BinRead::read`
  --> src/binread/mod.rs
   |
   |     fn read<R: Read + Seek>(reader: &mut R) -> BinResult<Self>
   |        ---- required by a bound in this associated function
...
   |         for<'a> Self::Args<'a>: Required,
   |                                 ^^^^^^^^ required by this bound in `BinRead::read`
